[gd_scene load_steps=30 format=2]

[ext_resource path="res://mccicons/Icon-RSR.png" type="Texture" id=1]
[ext_resource path="res://mccicons/Icon-BSABM.png" type="Texture" id=2]
[ext_resource path="res://mccicons/Icon-PKT.png" type="Texture" id=3]
[ext_resource path="res://mccicons/Icon-SOT.png" type="Texture" id=4]
[ext_resource path="res://mccicons/Icon-SBA.png" type="Texture" id=5]
[ext_resource path="res://mccicons/Icon-DB.png" type="Texture" id=6]
[ext_resource path="res://mccicons/Icon-AR.png" type="Texture" id=7]
[ext_resource path="res://mccicons/Icon-HITW.png" type="Texture" id=8]
[ext_resource path="res://mccicons/Icon-SG.png" type="Texture" id=9]
[ext_resource path="res://mccicons/Icon-MD.png" type="Texture" id=10]
[ext_resource path="res://mccicons/Skyblockle-Icon.png" type="Texture" id=11]
[ext_resource path="res://mccicons/Icon-PKW.png" type="Texture" id=12]
[ext_resource path="res://mccicons/Unknown-Icon.png" type="Texture" id=13]
[ext_resource path="res://mccicons/Icon-TGTTOS.png" type="Texture" id=14]
[ext_resource path="res://4777615aa8394b8fa8fbe57996b1e3d9.png" type="Texture" id=15]
[ext_resource path="res://mccicons/Icon-BBF.png" type="Texture" id=16]
[ext_resource path="res://mccicons/Icon-BB.png" type="Texture" id=17]
[ext_resource path="res://mccicons/Icon-GR.png" type="Texture" id=18]
[ext_resource path="res://Fonts/Poppins-ExtraLight.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Fonts/Poppins-ExtraBold.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://Fonts/Poppins-Medium.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://Fonts/Poppins-Light.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://StatDisplay.gd" type="Script" id=23]

[sub_resource type="Animation" id=6]
resource_name = "main"
length = 20.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Display/Avatar:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -296, -0.25, 0, 0.25, 0, -296, -0.25, 0, 0.7, 489.295, 296, -0.25, 0, 0.25, 0, 296, -0.25, 0, 0.25, 0, -296, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2, 19, 20 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Display/Avatar:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -180, -0.25, 0, 0.25, 0, -180, -0.25, 0, 1.3, 206.386, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2.3, 19, 20 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("BG/GreyBG:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -2000, -0.25, 0, 0.2, 2385.88, 40, -0.25, 0, 0.25, 0, 40, -0.25, 0, 0.25, 0, -2000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.001, 19, 20 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Display/GameIcon:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.4, -96.3542, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 19.1, 20 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Display/GameIcon:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -386, -0.25, 0, 0.25, 0, -386, -0.25, 0, 0.4, 644.717, 386, -0.25, 0, 0.25, 0, 386, -0.25, 0, 0.25, 0, -386, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 19.1, 20 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Display/GameName:rect_position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1485, -0.25, 0, 0.25, 0, 1485, -0.25, 0, 0.0599999, -972.594, 485, -0.25, 0, 0.25, 0, 485, -0.25, 0, 0.25, 0, 1485, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5, 19.2, 20 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Display/TitleName:rect_position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1485, -0.25, 0, 0.25, 0, 1485, -0.25, 0, 0, -989.793, 485, -0.25, 0, 0.25, 0, 485, -0.25, 0, 0.25, 0, 1485, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1.7, 19.3, 20 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Display/Name:rect_position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1485, -0.25, 0, 0.25, 0, 1485, -0.25, 0, 0, -989.793, 485, -0.25, 0, 0.25, 0, 485, -0.25, 0, 0.25, 0, 1485, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.9, 19.4, 20 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Display/Value:rect_position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1485, -0.25, 0, 0.25, 0, 1485, -0.25, 0, 0, -1006.99, 485, -0.25, 0, 0.25, 0, 485, -0.25, 0, 0.25, 0, 1485, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.1, 2.1, 19.5, 20 )
}

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 20 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "GLOBAL_STATISTICS",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "LEGACY_STATISTICS",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "MG_ACE_RACE",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "MG_BATTLE_BOX",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "MG_BINGO_BUT_FAST",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "MG_BUILD_MART",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "MG_DODGEBOLT",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "MG_GRID_RUNNERS",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "MG_HOLE_IN_THE_WALL",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "MG_MELTDOWN",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "MG_PARKOUR_TAG",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "MG_PARKOUR_WARRIOR",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "MG_ROCKET_SPLEEF",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "MG_SANDS_OF_TIME",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "MG_SKYBLOCKLE",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "MG_SKY_BATTLE",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "MG_SURVIVAL_GAMES",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "MG_TGTTOSAWAF",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 22 )

[node name="Node2D" type="Node2D"]

[node name="StatDisplay" type="Node2D" parent="."]
script = ExtResource( 23 )

[node name="BG" type="Node2D" parent="StatDisplay"]

[node name="WhiteBG" type="ColorRect" parent="StatDisplay/BG"]
margin_right = 1316.0
margin_bottom = 742.0

[node name="GreyBG" type="ColorRect" parent="StatDisplay/BG"]
margin_left = -2000.0
margin_top = 40.0
margin_right = -800.0
margin_bottom = 680.0
color = Color( 0.784314, 0.784314, 0.784314, 1 )

[node name="Animator" type="AnimationPlayer" parent="StatDisplay"]
anims/main = SubResource( 6 )

[node name="Display" type="Node2D" parent="StatDisplay"]
position = Vector2( 98, 10 )

[node name="Avatar" type="Sprite" parent="StatDisplay/Display"]
position = Vector2( -296, 425 )
rotation = -3.14159
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 15 )

[node name="TitleName" type="RichTextLabel" parent="StatDisplay/Display"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1485.0
margin_top = 269.0
margin_right = 2044.0
margin_bottom = 430.0
custom_fonts/normal_font = SubResource( 1 )
text = "Special: Most dogs petted"

[node name="GameIcon" type="AnimatedSprite" parent="StatDisplay/Display"]
position = Vector2( -386, 147 )
rotation = 1.5708
frames = SubResource( 2 )
animation = "MG_ACE_RACE"

[node name="GameName" type="RichTextLabel" parent="StatDisplay/Display"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1485.0
margin_top = 117.0
margin_right = 2055.0
margin_bottom = 176.0
custom_fonts/normal_font = SubResource( 3 )
text = "Ace Race"

[node name="Value" type="RichTextLabel" parent="StatDisplay/Display"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1485.0
margin_top = 515.0
margin_right = 2055.0
margin_bottom = 574.0
custom_fonts/normal_font = SubResource( 4 )
text = "100"

[node name="Name" type="RichTextLabel" parent="StatDisplay/Display"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1485.0
margin_top = 445.0
margin_right = 2055.0
margin_bottom = 504.0
custom_fonts/normal_font = SubResource( 5 )
text = "awesamdude"

[connection signal="animation_finished" from="StatDisplay/Animator" to="StatDisplay" method="_on_Animator_animation_finished"]
